--- a/KGLGE/KGLGE.vcxproj.filters
+++ b/KGLGE/KGLGE.vcxproj.filters
@@ -64,5 +64,8 @@
     <ClCompile Include="Runner.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameLoop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
