Multiple Texture slots
Fucking Hell, I feel like I'm an idiot? The issue was GameLoop.cpp line 74, where it sets the active texture. Everything I was reading online said you need to do it after loading the texture, but you have to do it before... UGH. Now I get to rewrite my Texture Atlas Class. 3rd times a charm

--- a/KGLGE/KGLGE.vcxproj
+++ b/KGLGE/KGLGE.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
+    <ClCompile Include="Test.cpp" />
     <ClCompile Include="TextureAtlas.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
