--- a/KGLGE/KGLGE.vcxproj.filters
+++ b/KGLGE/KGLGE.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClCompile Include="TextureAtlas.cpp">
       <Filter>Source Files\Shaders</Filter>
     </ClCompile>
+    <ClCompile Include="Test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
