--- a/KGLGE/KGLGE.vcxproj
+++ b/KGLGE/KGLGE.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="Math.hpp" />
     <ClInclude Include="Runner.h" />
     <ClInclude Include="ShaderProgram.h" />
+    <ClInclude Include="Sprite.h" />
     <ClInclude Include="TextureAtlas.h" />
     <ClInclude Include="Time.hpp" />
     <ClInclude Include="Window.h" />
@@ -183,6 +184,7 @@
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
+    <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="TextureAtlas.cpp" />
     <ClCompile Include="Window.cpp" />
