--- a/KGLGE/KGLGE.vcxproj
+++ b/KGLGE/KGLGE.vcxproj
@@ -169,9 +169,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Batcher.h" />
+    <ClInclude Include="Empty.h" />
     <ClInclude Include="GameLoop.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Image.h" />
+    <ClInclude Include="LevelCreator.h" />
     <ClInclude Include="LevelLoader.h" />
     <ClInclude Include="Math.hpp" />
     <ClInclude Include="Runner.h" />
@@ -183,9 +185,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Batcher.cpp" />
+    <ClCompile Include="Empty.cpp" />
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Image.cpp" />
+    <ClCompile Include="LevelCreator.cpp" />
     <ClCompile Include="LevelLoader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
