--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -45,6 +45,82 @@
             ],
             "group": "build",
             "detail": "compiler: /usr/bin/g++"
+        },
+        {
+            "type": "cppbuild",
+            "label": "Build File For Library",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-c",
+                "-g",
+                "main.cpp",
+                "Window.cpp",
+                "Batcher.cpp",
+                "Empty.cpp",
+                "GameLoop.cpp",
+                "GameObject.cpp",
+                "Image.cpp",
+                "LevelCreator.cpp",
+                "LevelLoader.cpp",
+                "RedAndBlue.cpp",
+                "ShaderProgram.cpp",
+                "Sprite.cpp",
+                "Square.cpp",
+                "TextureAtlas.cpp",
+
+                "-lGL",
+                "-lGLU",
+                "-lglfw3",
+                "-lX11",
+                "-lXxf86vm",
+                "-lXrandr",
+                "-lpthread",
+                "-lXi",
+                "-ldl",
+                "-lXinerama",
+                "-lXcursor",
+                "-lGLEW"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "compiler: /usr/bin/g++"
+        },
+        {
+            "type": "cppbuild",
+            "label": "Build to Library",
+            "command": "/usr/bin/ar",
+            "args": [
+                "rs",
+                "KGLGE.a",
+                "Batcher.o",
+                "Empty.o",
+                "GameLoop.o",
+                "GameObject.o",
+                "Image.o",
+                "LevelCreator.o",
+                "LevelLoader.o",
+                "main.o",
+                "RedAndBlue.o",
+                "ShaderProgram.o",
+                "Sprite.o",
+                "Square.o",
+                "TextureAtlas.o",
+                "Window.o"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "detail": "compiler: /usr/bin/g++",
         }
     ],
     "version": "2.0.0"
